deploy/overlays/qa/bpc-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bpc
  labels:
    app: bpc
spec:
  replicas: 2
